samples/_failures_safe/1761605195_c454f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e85c6212.c:186:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  186 | void graph
      | ^~~~
